# ChangeLog for sys-libs/freeipmi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.13 2009/04/17 18:19:40 flameeyes Exp $

*freeipmi-0.7.8 (17 Apr 2009)

  17 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +freeipmi-0.7.8.ebuild:
  Version bump, finally works with glibc 2.9.

*freeipmi-0.6.10 (03 Nov 2008)

  03 Nov 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/freeipmi-0.6.10+glibc-2.8.patch, +freeipmi-0.6.10.ebuild:
  Version bump to version 0.6.10, closes bug #245113 by Badalian Slava, and
  add a patch to build with glibc 2.8, closes bug #241422.

*freeipmi-0.5.6 (22 Apr 2008)

  22 Apr 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/freeipmi-0.5.6-as_needed.patch,
  +files/freeipmi-0.5.6-missing_syslog_include.patch,
  +files/bmc-watchdog.confd, +files/bmc-watchdog.initd,
  +files/ipmidetectd.initd, metadata.xml, -freeipmi-0.1.3.ebuild,
  -freeipmi-0.2.3.ebuild, +freeipmi-0.5.6.ebuild:
  Version bump (bug #199284), reassigned package to 'sysadmin' herd.

*freeipmi-0.4.4 (23 Sep 2007)

  23 Sep 2007; Robin H. Johnson <robbat2@gentoo.org> +freeipmi-0.4.4.ebuild:
  Bug #159246, version bump.

  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> Manifest:
  Fix Manifest.

  10 Jan 2007; <marijn@gentoo.org> freeipmi-0.2.3.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  10 Jan 2007; <marijn@gentoo.org> freeipmi-0.1.3.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

*freeipmi-0.2.3 (01 Oct 2006)

  01 Oct 2006; Robin H. Johnson <robbat2@gentoo.org> +freeipmi-0.2.3.ebuild:
  Bug #145702, version bump, looking very promising now.

  01 Oct 2006; Robin H. Johnson <robbat2@gentoo.org> freeipmi-0.1.3.ebuild:
  Fix file collision, bug #149357.

  24 May 2005; Tom Martin <slarti@gentoo.org> freeipmi-0.1.3.ebuild:
  Marked ~amd64 for tigger^.

  17 May 2005; Robin H. Johnson <robbat2@gentoo.org> freeipmi-0.1.3.ebuild:
  Fix bug #92596.
