@@ -13,14 +13,14 @@ DIST freeipmi-0.6.10.tar.gz 1669900 RMD160 073790a58d1589c1a07dcf73baa6601f4cb1d
 DIST freeipmi-0.7.8.tar.gz 1948367 RMD160 0092282935aff2aae29fdf6a12c6bec554569286 SHA1 572c7d60f36ae229a406713438300ae151261c30 SHA256 6f637464e16c7a5ecffd5ec8e9d722e7a755a6fe9f4c9cddf0c69190204ad75f
 EBUILD freeipmi-0.4.4.ebuild 1492 RMD160 4104eb8d1c56744e4492d44784d75d042d694809 SHA1 1a454b492df2d10b3b78ce841edcebc5c60cd59e SHA256 6f872f605957478459fbc109a9cbc80435428cd302cb6d0a8e473b7c27775277
 EBUILD freeipmi-0.5.6.ebuild 1560 RMD160 e2756cbcefdd7f6b86d4d036bbc7b78cd415b716 SHA1 1fb62df5ff3d793721f8636c995ba1fdf7f68dee SHA256 a2829df20198643cc42b314b1c5c76bc46b8cdb4002450e0a85a820bac856c05
-EBUILD freeipmi-0.6.10.ebuild 1451 RMD160 18f6d89445167dd0fac827c4bf330a3f4cbf51e8 SHA1 96ca5a70307fd55c431c7279cfa16a63e5880eb1 SHA256 e78816b0fc9a583e73912f9865654c35982a5004bb68f5119106427e5deac4de
+EBUILD freeipmi-0.6.10.ebuild 1446 RMD160 f65fb809a65cdcfdb06c83970bb039a015c03f36 SHA1 4cfba5bda186d62132ed3b2e1400fe811b20f833 SHA256 ac5e4504f89c6877161ef9198250c62d142c273d3b934aa4f4c3d0eb7566c6ec
 EBUILD freeipmi-0.7.8.ebuild 1297 RMD160 82cb4b0a8cc00a1774a9af799babea1a8133e754 SHA1 a01a17c60100fe84bb1e95dcc3e799461a35fe74 SHA256 461a9d665171d190733c545257e4fabedb7db47e2213b87cc6b1a3dc3639f801
-MISC ChangeLog 2306 RMD160 80e2fbcde86b0c798b296a867454d2ac2acf9c1c SHA1 9840c8fd2547e7aa0009728e393750757720e902 SHA256 72bd258d831af68e1153b6acb114f6ec0e98a6d64208750f355872abad6bef11
+MISC ChangeLog 2408 RMD160 b1eb762bd3dee1fd947c939b3f77adbf7c3c5e7a SHA1 23b5ca28246c9a602c373a359b4b7839c14b645b SHA256 dd6713521fa57fa7b186f08ce8092b266d0f32c393b2c255301e37da4857217c
 MISC metadata.xml 161 RMD160 036f72a3fa0f193b1ed10f46bea0df0a2bf7e07f SHA1 00f2ba2d18e3c9d0ba2305497408776582e87666 SHA256 4447fa40fb360e4e153d4fc115728bf9db74e1aa3536c77de0594dc487ca5cea
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAknoyEMACgkQAiZjviIA2XjtHwCghNbnfORByORIx7ngTDFaxxNu
-U64AnAuo2jbkZz+agpSu5oIOysfY7uSP
-=pduY
+iEYEARECAAYFAkn90Z8ACgkQkKaRLQcq0GIWFwCdGSWxQmai0wvaedB5qbQnSi2x
+seAAoLTUIIYHaPTsKI0oKpPcg1vc8Om9
+=SWdm
 -----END PGP SIGNATURE-----
