@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/freeipmi
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.13 2009/04/17 18:19:40 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.14 2009/05/03 17:17:10 maekke Exp $
+
+  03 May 2009; Markus Meier <maekke@gentoo.org> freeipmi-0.6.10.ebuild:
+  amd64/x86 stable, bug #268006
 
 *freeipmi-0.7.8 (17 Apr 2009)
 
